--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -62,3 +62,11 @@ margin: 2% auto;
     color: white;
     
 }
+.guessingImage {
+    vertical-align: middle;
+    border-style: none;
+    margin-top: -2%;
+    width: 80%;
+    max-width: 450px;
+}
+}
